# gl-capstone

./: .gitignore  CapstoneProject_PresentationTemplate.pptx  Insurance_Price_Prediction_Final_Presentation.pptx  Insurance_Price_Prediction_Project_Report.html  Milestone_1_Insurance_Price_Prediction.docx  Milestone_2_Insurance_Price_Prediction.docx  README.md  app.py  generate_html_report.py  insurance_modeling.py  pyproject.toml  requirements.txt  run_all.py  streamlit_app.py
Milestone_2/: 02_milestone2_modeling.html  02_milestone2_modeling.ipynb  Milestone_2_Insurance_Price_Prediction_Updated.docx
anup/: Milestone_2_Insurance_Price_Prediction.docx
api/: main.py
experiments/: 01_milestone1_eda_preprocessing.ipynb  02_milestone2_baseline_advanced_models.ipynb  03_milestone2_hyperparameter_tuning.ipynb  04_milestone2_selection_explainability.ipynb
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts
models/: metrics.json
notebooks/: 01_milestone1_eda.html  01_milestone1_eda.ipynb  02_milestone2_modeling.html  02_milestone2_modeling.ipynb  03_colab_gpu_training.ipynb
outputs/models/: app_schema.json  calibration_comparison.csv  feature_importance.csv  final_model.pkl  model_metadata.json  ordinal_challenger_metrics.csv  parsimony_candidates.csv  (+5 more)
scripts/: colab_gpu_run.sh  generate_milestone_reports.py  generate_presentation.py  prepare_colab_bundle.ps1
templates/: Milestone 1 Template.docx  Milestone 2 Template.docx
tests/: test_data.py  test_features.py  test_predict.py
(+71 files in other folders)
