[project]
name = "insurance-price-prediction"
version = "0.1.0"
description = "Great Learning capstone: insurance cost regression with a production sklearn pipeline, FastAPI inference service, React UI, and Streamlit demo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "joblib>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "optuna>=3.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "streamlit>=1.33",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.29",
    "shap>=0.45",
]

[project.scripts]
insurance-train = "insurance.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
